--- a/src/layout/theme.scss
+++ b/src/layout/theme.scss
@@ -1,6 +1,6 @@
 @import '~react-md/src/scss/react-md';
-$md-primary-color: $md-grey-400;
-$md-secondary-color: $md-red-800;
+$md-primary-color: $md-teal-600;
+$md-secondary-color: $md-orange-300;
 $md-tertiary-color: $md-grey-300;
 
 .main-container,
