changed the stucture a little

--- a/src/templates/post.scss
+++ b/src/templates/post.scss
@@ -65,9 +65,9 @@ $phone-status-bar-height: 24px - 12px;
                 margin-bottom: 10px !important;
             }
 
-            li {
-                margin-top: 15px;
-            }
+            // li {
+            //     margin-top: 15px;
+            // }
 
             /**
              * Based on MUICSS's Table Component
