--- a/src/layout/theme.scss
+++ b/src/layout/theme.scss
@@ -1,6 +1,6 @@
 @import '~react-md/src/scss/react-md';
 $md-primary-color: $md-teal-600;
-$md-secondary-color: $md-orange-300;
+$md-secondary-color: $md-amber-a-700;
 $md-tertiary-color: $md-grey-300;
 
 .main-container,
