--- a/src/templates/b16-tomorrow-dark.css
+++ b/src/templates/b16-tomorrow-dark.css
@@ -139,7 +139,7 @@ pre[class*="language-"] {
     cursor: help;
 }
 
-pre > code.highlight {
+/* pre > code.highlight {
     outline: 0.4em solid #c66;
     outline-offset: 0.4em;
-}
+} */
